<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FragmentCustomDialog"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

            <TextView
                android:id="@+id/tvReto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_dialog"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/reto_dialog"
                android:inputType="text"
                android:gravity="start"
                android:id="@+id/etReto"
                android:layout_marginTop="15dp"
                android:layout_marginHorizontal="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvReto" />


            <Button
                android:id="@+id/btnRetoCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/reto_button"
                android:clickable="true"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnRetoGuardar"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etReto" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/guardar"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:clickable="false"
                android:textColor="@color/colorWhite"
                android:background="@drawable/reto_button"
                android:id="@+id/btnRetoGuardar"
                app:layout_constraintTop_toBottomOf="@id/etReto"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>